Fix bullet point alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,6 +50,11 @@ p {
   margin-bottom: 1em;
 }
 
+ul, ol {
+  padding-left: 2.5rem;
+  margin-bottom: 1em;
+}
+
 code {
   background: #f5f5f5;
   padding: 0.2em 0.4em;
